--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,28 @@ project(DehazingCE)
 
 set(CMAKE_BUILD_TYPE "Release")
 
-if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+# VapourSynth header files
+if (UNIX)
     set(VAPOURSYNTH_INCLUDE_DIR "/usr/include" CACHE PATH "VapourSynth header files")
-    if (NOT EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
+    set(VAPOURSYNTH_INCLUDE_DIR_LOCAL "src" CACHE PATH "VapourSynth header files local")
+    if (EXISTS "${VAPOURSYNTH_INCLUDE_DIR_LOCAL}/vapoursynth/VSHelper.h")
+        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR_LOCAL)
+    elseif (EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
+        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR)
+    else()
         message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE_DIR")
     endif()
-elseif (CMAKE_SYSTEM_NAME STREQUAL "Windows")
+elseif (WIN32)
     set(VAPOURSYNTH_INCLUDE_DIR "C:/Program Files/VapourSynth/sdk/include" CACHE PATH "VapourSynth header files")
-    if (NOT EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
+    set(VAPOURSYNTH_INCLUDE_DIR_LOCAL "src" CACHE PATH "VapourSynth header files local")
+    if (EXISTS "${VAPOURSYNTH_INCLUDE_DIR_LOCAL}/vapoursynth/VSHelper.h")
+        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR_LOCAL)
+    elseif (EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
+        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR)
+    else()
         message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE_DIR")
     endif()
 endif()
 
 add_library(DehazingCE SHARED src/main.cpp src/DehazingCE.cpp src/GuidedFilter.cpp src/Lut.cpp)
-target_include_directories(DehazingCE PRIVATE ${VAPOURSYNTH_INCLUDE_DIR})
+target_include_directories(DehazingCE PRIVATE ${VAPOURSYNTH_INCLUDE})
