--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ script:
   - wget https://github.com/vapoursynth/vapoursynth/archive/R50.tar.gz
   - tar -xzvf R50.tar.gz vapoursynth-R50/include
   - mkdir src/vapoursynth
-  - mv vapoursynth-R50/include/VapourSynth.h include/vapoursynth/VapourSynth.h
-  - mv vapoursynth-R50/include/VSHelper.h include/vapoursynth/VSHelper.h
+  - mv vapoursynth-R50/include/VapourSynth.h src/vapoursynth/VapourSynth.h
+  - mv vapoursynth-R50/include/VSHelper.h src/vapoursynth/VSHelper.h
   - mkdir build && cd build
-  - cmake -DVAPOURSYNTH_INCLUDE_DIR src/include ..
+  - cmake ..
   - cmake --build .
