--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ if (UNIX)
     elseif (EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
         set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR)
     else()
-        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE_DIR")
+        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE")
     endif()
 elseif (WIN32)
     set(VAPOURSYNTH_INCLUDE_DIR "C:/Program Files/VapourSynth/sdk/include" CACHE PATH "VapourSynth header files")
@@ -22,7 +22,7 @@ elseif (WIN32)
     elseif (EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
         set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR)
     else()
-        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE_DIR")
+        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE")
     endif()
 endif()
 
