--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,25 +6,15 @@ set(CMAKE_BUILD_TYPE "Release")
 # VapourSynth header files
 if (UNIX)
     set(VAPOURSYNTH_INCLUDE_DIR "/usr/include" CACHE PATH "VapourSynth header files")
-    set(VAPOURSYNTH_INCLUDE_DIR_LOCAL "src" CACHE PATH "VapourSynth header files local")
-    if (EXISTS "${VAPOURSYNTH_INCLUDE_DIR_LOCAL}/vapoursynth/VSHelper.h")
-        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR_LOCAL)
-    elseif (EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
-        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR)
-    else()
-        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE")
+    if (NOT EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
+        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE_DIR")
     endif()
 elseif (WIN32)
     set(VAPOURSYNTH_INCLUDE_DIR "C:/Program Files/VapourSynth/sdk/include" CACHE PATH "VapourSynth header files")
-    set(VAPOURSYNTH_INCLUDE_DIR_LOCAL "src" CACHE PATH "VapourSynth header files local")
-    if (EXISTS "${VAPOURSYNTH_INCLUDE_DIR_LOCAL}/vapoursynth/VSHelper.h")
-        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR_LOCAL)
-    elseif (EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
-        set(VAPOURSYNTH_INCLUDE VAPOURSYNTH_INCLUDE_DIR)
-    else()
-        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE")
+    if (NOT EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
+        message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE_DIR")
     endif()
 endif()
 
 add_library(DehazingCE SHARED src/main.cpp src/DehazingCE.cpp src/GuidedFilter.cpp src/Lut.cpp)
-target_include_directories(DehazingCE PRIVATE ${VAPOURSYNTH_INCLUDE})
+target_include_directories(DehazingCE PRIVATE ${DVAPOURSYNTH_INCLUDE_DIR})
