:wrench: CMakeLists: Add C++11 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,6 @@ elseif (WIN32)
     endif()
 endif()
 
+add_definitions(-std=c++11)
 add_library(DehazingCE SHARED src/main.cpp src/DehazingCE.cpp src/GuidedFilter.cpp src/Lut.cpp)
 target_include_directories(DehazingCE PRIVATE ${DVAPOURSYNTH_INCLUDE_DIR})
