--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_BUILD_TYPE "Release")
 
 # VapourSynth header files
 if (UNIX)
-    set(VAPOURSYNTH_INCLUDE_DIR "/usr/include" CACHE PATH "VapourSynth header files")
+    set(VAPOURSYNTH_INCLUDE_DIR "/usr/local/include" CACHE PATH "VapourSynth header files")
     if (NOT EXISTS "${VAPOURSYNTH_INCLUDE_DIR}/vapoursynth/VSHelper.h")
         message(FATAL_ERROR "VapourSynth header files not found, specify with -DVAPOURSYNTH_INCLUDE_DIR")
     endif()
