--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
 
-  build:
+  build-linux:
 
     runs-on: ubuntu-latest
 
@@ -44,3 +44,25 @@ jobs:
       - name: build
         run: cmake --build build -j 2
 
+  build-windows:
+
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: configure
+        run:  |
+          curl -s -L https://github.com/vapoursynth/vapoursynth/archive/refs/tags/${{env.VAPOURSYNTH_VERSION}}.tar.gz -o ${{env.VAPOURSYNTH_VERSION}}.tar.gz
+          tar -xzvf ${{env.VAPOURSYNTH_VERSION}}.tar.gz vapoursynth-${{env.VAPOURSYNTH_VERSION}}/include
+          mkdir "C:/Program Files/VapourSynth/sdk/include/vapoursynth"
+          mv vapoursynth-${{env.VAPOURSYNTH_VERSION}}/include/VapourSynth.h "C:/Program Files/VapourSynth/sdk/include/vapoursynth/VapourSynth.h"
+          mv vapoursynth-${{env.VAPOURSYNTH_VERSION}}/include/VSHelper.h "C:/Program Files/VapourSynth/sdk/include/vapoursynth/VSHelper.h"
+          mkdir "src/vapoursynth"
+          cp "C:/Program Files/VapourSynth/sdk/include/vapoursynth/VapourSynth.h" "src/vapoursynth/VapourSynth.h"
+          cp "C:/Program Files/VapourSynth/sdk/include/vapoursynth/VSHelper.h" "src/vapoursynth/VSHelper.h"
+          mkdir build && cd build
+          cmake ..
+
+      - name: build
+        run: cmake --build build -j 2
